fix: add Vercel origin to CORS allowed list